# advent-of-code

2021/01/: Cargo.toml
2021/02/: 1.dart  2.dart
2021/04/: solution.js  test.js
2021/05/: aoc_05.opam  dune-project
2021/05/lib/: dune
2021/06/: aoc_06.opam  dune-project
2021/06/lib/: dune
2021/06/test/: dune
2021/07/: aoc_07.opam  dune-project
2021/07/lib/: dune
2021/07/test/: dune
2022/01/: .gitignore  build.zig
2022/01/src/: main.zig
2022/02/: aoc_02.opam  dune-project
2022/02/lib/: dune
2022/03/: aoc_03.opam  dune-project
2022/03/lib/: dune
2022/03/test/: dune
2022/04/: aoc_04.opam  dune-project
2022/04/lib/: dune  lib.ml
2022/06/: aoc_06.opam  dune-project
2022/06/lib/: datastream.ml
2022/07/: aoc_07.opam  dune-project
2022/07/lib/: dune
2023/: .gitignore  Program.fs  aoc.fsproj  day_1.fs  day_1_2.fs  day_2.fs  day_2_2.fs  day_3.fs
2024/: .tool-versions  Program.fs  aoc.fsproj  day_1.fs  day_1_2.fs  day_2.fs  day_3.fs  day_3_2.fs
2025/: aoc_2025.opam  dune-project  mise.toml
