(lang dune 3.20)
(name aoc_2025)
(version dev)
(generate_opam_files)

(license MIT)
(authors "Pascal Widdershoven")
(maintainers "Pascal Widdershoven")

(package
 (name aoc_2025)
 (synopsis "Advent of Code 2025")
 (allow_empty)
 (depends
  (ocaml (>= 5.4.0))
  (core (>= 0.17.0))
  (stdio (>= 0.17.0))

  ;; Dev setup
  (utop :with-dev-setup)
  (ocamlformat :with-dev-setup)
  (ocp-indent :with-dev-setup)
  (merlin :with-dev-setup)
  (ocaml-lsp-server :with-dev-setup)))
